# ILUStateMachine

./: .gitignore  .gitlab-ci.yml  INSTALL.md  Makefile.am  PLANNING  README  README.md  TODO  configure.ac
Demo/: Makefile.am  README.md
Demo/DefaultState/: Main.cpp  Makefile.am
Demo/FirstStateMachine/: FirstStateMachine  Main.cpp  Makefile.am
Demo/FirstStateMachineWithData/: Main.cpp  Makefile.am
Demo/GuardedHandlers/: Main.cpp  Makefile.am
Demo/NestedStateMachine/: Makefile.am
Demo/NestedStateMachine/App/: Main.cpp  Makefile.am
Demo/NestedStateMachine/Events/: CEventChildData.cpp  CEventRootData.cpp  Makefile.am
Demo/NestedStateMachine/Events/Include/: CEventChildData.h  CEventRootData.h  EEventChild.h  EEventRoot.h
Demo/NestedStateMachine/StateMachineChild/: CData.cpp  CState1.cpp  CState2.cpp  CState3.cpp  Makefile.am  StateConstrDestr.cpp  StateMachineChild.cpp
Demo/NestedStateMachine/StateMachineChild/Include/: StateMachineChild.h
Demo/NestedStateMachine/StateMachineChild/Internal/: CData.h  CState1.h  CState2.h  CState3.h  CreateState.h
Demo/NestedStateMachine/StateMachineRoot/: CData.cpp  CState1.cpp  CState2.cpp  CState3.cpp  Makefile.am  StateConstrDestr.cpp  StateMachineRoot.cpp
Demo/NestedStateMachine/StateMachineRoot/Include/: StateMachineRoot.h
Demo/NestedStateMachine/StateMachineRoot/Internal/: CData.h  CState1.h  CState2.h  CState3.h  CreateState.h
Demo/NoneStandardStateFlowInConstructor/: Main.cpp  Makefile.am
Demo/NoneStandardStateFlowInHandler/: Main.cpp  Makefile.am
Lib/: CCreateState.cpp  CCreateStateFinished.cpp  CEventBase.cpp  CHandleEventInfoBase.cpp  CLogIndent.cpp  CSPEventBaseSort.cpp  CState.cpp  CStateChangeException.cpp  CStateEvtId.cpp  CStateMachine.cpp  CStateMachineData.cpp  Logging.cpp  LoggingInternal.cpp  LoggingSerial.cpp  Makefile.am  libStateMachine.cpp
Lib/Include/: CCreateState.h  CCreateStateFinished.h  CEventBase.h  CHandleEventInfoBase.h  CLogIndent.h  CSPEventBaseSort.h  CState.h  CStateChangeException.h  CStateEvtId.h  CStateEvtIdImpl.h  CStateMachine.h  CStateMachineData.h  CStateMachineImpl.h  EEvtSubNotSet.h  Gcc.h  Logging.h  StateMachine.h  TCreateState.h  TCreateStateNoData.h  TEventEvtId.h  TEventEvtIdImpl.h  THandleEventInfo.h  THandleEventInfoImpl.h  THandleEventTypeInfo.h  THandleEventTypeInfoImpl.h  Types.h
Lib/Internal/: LoggingInternal.h  LoggingSerial.h  TLog.h
Test/: Makefile  Makefile.am
Test/App/: Main.cpp  Makefile.am
Test/LibEvents/Include/: EventType2.h  Events.h
Test/StateMachineChild/: CChildData.cpp  CChildState1.cpp  CChildState2.cpp  CChildState3.cpp  ChildStateConstrDestr.cpp  Makefile.am  StateMachineChild.cpp
Test/StateMachineChild/Include/: StateMachineChild.h
Test/StateMachineChild/Internal/: CChildData.h  CChildState1.h  CChildState2.h  CChildState3.h  ChildCreateState.h
Test/StateMachineRoot/: CData.cpp  CState1.cpp  CState2.cpp  CState3.cpp  CState4.cpp  CStateDefault.cpp  Makefile.am  StateConstrDestr.cpp  StateMachineRoot.cpp
Test/StateMachineRoot/Include/: StateMachineRoot.h
Test/StateMachineRoot/Internal/: CData.h  CState1.h  CState2.h  CState3.h  CState4.h  CStateDefault.h  CreateState.h
docs/: Doxyfile.in  Makefile.am
